--- a/wetin/package.json
+++ b/wetin/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
