--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -1,16 +1,11 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name seu-dominio-ou-ip;
 
-    root /usr/share/nginx/html/index.html;
+    root /var/www/html; 
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        log_not_found off;
+        try_files $uri /index.html;
     }
 }
