--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name seu-dominio-ou-ip;
+    server_name localhost;
 
     root /var/www/html; 
     index index.html;
