--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:latest
 
 # Copiar o arquivo de configuração do Nginx para o contêiner
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 # Copiar os arquivos do build do React para o diretório padrão do Nginx
 COPY ./build /usr/share/nginx/html
