--- a/wetin/docker-compose.yml
+++ b/wetin/docker-compose.yml
@@ -1,18 +1,9 @@
 version: '3'
 services:
-  frontend-builder:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ./build:/app/build
-
-  nginx:
-    image: nginx:latest
-    depends_on:
-      - frontend-builder
-    volumes:
-      - ./build:/usr/share/nginx/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  web:
+    build: .
     ports:
       - "8080:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./build:/usr/share/nginx/html
