--- a/wetin/docker-compose.yml
+++ b/wetin/docker-compose.yml
@@ -1,9 +1,25 @@
-version: '3'
+version: "3.8"
+
 services:
-  web:
-    build: .
-    ports:
-      - "8080:80"
+  build-container:
+    build:
+      context: .
+      dockerfile: Dockerfile # Apontando para o Dockerfile atualizado
+    container_name: build-container
+    working_dir: /app
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./build:/usr/share/nginx/html
+      - .:/app
+      - /app/node_modules
+    environment:
+      - CI=true
+
+  nginx-container:
+    image: nginx:alpine
+    container_name: nginx-container
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./build:/usr/share/nginx/html 
+    ports:
+      - "80:80"
+    depends_on:
+      - build-container # O nginx só começa após o build-container terminar
