--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -1,11 +1,18 @@
-server {
-    listen 80;
-    server_name localhost;
+user nginx;
+worker_processes auto;
+pid /var/run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
-    root /usr/share/nginx/html; 
-    index index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri /index.html;
-    }
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
+
+    include /etc/nginx/conf.d/*.conf;
 }
