--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Clonando o repositório do GitHub
 RUN git clone https://github.com/Wetinn/WeTin-React.git
 
+# Mudando para o diretório do repositório clonado
 WORKDIR /app/WeTin-React/wetin
 
 # Instalação das dependências
