--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -1,25 +1,11 @@
 FROM node:20 AS builder
-
-# Definindo diretório de trabalho
 WORKDIR /app
+COPY . .
+WORKDIR /app/wetin
+RUN npm install && npm run build
 
-# Clonando o repositório do GitHub
-RUN git clone https://github.com/Wetinn/WeTin-React.git
-
-# Mudando para o diretório do repositório clonado (ajuste conforme necessário)
-WORKDIR /app/WeTin-React/wetin
-
-# Instalando as dependências e exibindo mensagens de conclusão
-RUN npm install
-
-# Fazendo o build do projeto
-RUN npm run build
-
-# Fase de produção (NGINX)
 FROM nginx:alpine
-
-# Copiando arquivos do build gerado para o NGINX
-COPY --from=builder /app/WeTin-React/wetin/build /usr/share/nginx/html
-
-# Expondo a porta 80
+COPY --from=builder /app/wetin/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
