--- a/wetin/docker-compose.yml
+++ b/wetin/docker-compose.yml
@@ -1,12 +1,25 @@
 version: "3.8"
 
 services:
-  app:
+  build-container:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: app-container
+    container_name: build-container
+    volumes:
+      - .:/app
+    working_dir: /app/wetin
     environment:
       - CI=true
+    command: ["npm", "run", "build"]
+
+  nginx-container:
+    image: nginx:alpine
+    container_name: nginx-container
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./wetin/build:/usr/share/nginx/html
     ports:
       - "80:80"
+    depends_on:
+      - build-container
