Mudando configurações docker 11

--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:20 AS builder
+
 WORKDIR /app
-COPY . .
-WORKDIR /app/wetin
-RUN npm install && npm run build
+
+RUN git clone https://github.com/Wetinn/WeTin-React.git
+
+WORKDIR /app/WeTin-React/wetin
+RUN npm install
+RUN npm run build
 
 FROM nginx:alpine
-COPY --from=builder /app/wetin/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY --from=builder /app/WeTin-React/wetin/build /usr/share/nginx/html
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
