--- a/wetin/docker-compose.yml
+++ b/wetin/docker-compose.yml
@@ -10,15 +10,15 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - /app/WeTin-React/wetin/build
     environment:
       - CI=true
 
   nginx-container:
     image: nginx:alpine
     container_name: nginx-container
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./build:/usr/share/nginx/html 
+    build:
+      context: .
     ports:
       - "80:80"
     depends_on:
