Mudando configurações docker 13

--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 RUN git clone https://github.com/Wetinn/WeTin-React.git
 
+WORKDIR /app/WeTin-React/wetin
 
 RUN npm install
 RUN npm run build
