--- a/wetin/Dockerfile
+++ b/wetin/Dockerfile
@@ -13,6 +13,8 @@ RUN npm run build
 
 FROM nginx:alpine
 
+COPY ./nginx.conf /etc/nginx/nginx.conf
+
 COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
