--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -1,18 +1,20 @@
-user nginx;
-worker_processes auto;
-pid /var/run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+server {
+    listen 80;
+    server_name _;
 
-events {
-    worker_connections 1024;
-}
+    location /api/ {
+        proxy_pass http://10.0.1.10:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    sendfile on;
-    keepalive_timeout 65;
-
-    include /etc/nginx/conf.d/*.conf;
+    location ~* /swagger-ui/ {
+        proxy_pass http://10.0.1.10:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
