--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -1,20 +1,25 @@
-server {
-    listen 80;
-    server_name _;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location /api/ {
-        proxy_pass http://10.0.1.10:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    server {
+        listen 80;
+        server_name _;
 
-    location ~* /swagger-ui/ {
-        proxy_pass http://10.0.1.10:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location /api/ {
+            proxy_pass http://10.0.1.10:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~* /swagger-ui/ {
+            proxy_pass http://10.0.1.10:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
