Colocando config html

--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -6,6 +6,11 @@ http {
         listen 80;
         server_name _;
 
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+
         location /api/ {
             proxy_pass http://10.0.1.10:8080;
             proxy_set_header Host $host;
