--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -21,6 +21,7 @@ http {
         }
 
         location /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://10.0.1.10:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
