--- a/wetin/nginx.conf
+++ b/wetin/nginx.conf
@@ -9,8 +9,14 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    upstream backend {
+      server 10.0.1.10:8080
+      server 10.0.1.11:8080
+    }
+
     server {
-        listen 80;
+        listen 80 default_server;
+        listen [::]:80 default_server;
         server_name _;
 
         root /usr/share/nginx/html;
@@ -22,7 +28,7 @@ http {
 
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://10.0.1.10:8080;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,7 +36,7 @@ http {
         }
 
         location ~* /swagger-ui/ {
-            proxy_pass http://10.0.1.10:8080;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
